# hack-setup

./: .gitignore  Dockerfile  ENTRA_PROVISIONING.md  README.md  app.py  check_app_permissions.py  check_licenses.py  config.example.yaml  coverage.xml  debug_startup.sh  deploy.ps1  deploy.sh  dev_server.py  diag.ps1  docker-compose.yml  grant_entra_permissions.py  grant_sp_permission.py  gunicorn.conf.py  provision_entra_users.py  provision_failed_users.ps1  pyproject.toml  requirements-prod.txt  requirements.txt  sample_provision_config.json  startup.sh  swa-cli.config.json  test_sp_admin_enqueue.py  test_sp_provision.py  test_sp_token_debug.py  users.txt
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  deploy-appservice.yml  deploy-swa.yml
api/: function_app.py  local.settings.json  requirements.txt
assets/reference/: reference-guide.docx
docs/: ARCHITECTURE.md
frontend/: index.html  staticwebapp.config.json
frontend/styles/: base.css  components.css  layout.css  tokens.css  views.css
routes/: __init__.py  _state.py  chat.py  docs.py  github.py  hack_state.py  lifecycle.py  provision.py  scheduler.py  static.py  tenant.py  upload.py
samples/: users.csv
samples/payload/: Welcome.txt
tests/: test_admin_license_option.py  test_chatbot_admin_guide_link.py  test_config.py  test_graph_retry.py  test_hack_report.py  test_platform_events.py  test_platform_models.py  test_platform_operations.py  test_platform_security.py  test_platform_telemetry.py  test_security_hardening.py  test_sources.py  test_state_archive.py  test_uploader.py
(+126 files in other folders)
