[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "onedrive-provisioner"
version = "1.0.0"
description = "Production-grade automated OneDrive provisioning and file upload tool (MCP + CLI) using Microsoft Graph."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "OneDrive Provisioner Maintainers" }]
dependencies = [
    "httpx>=0.27",
    "msal>=1.28",
    "click>=8.1",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "PyYAML>=6.0",
    "tenacity>=8.2",
    "anyio>=4.3",
    "structlog>=24.1",
    "mcp>=1.2.0",
    "azure-identity>=1.15",
    "azure-storage-blob>=12.19",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.4",
]

[project.scripts]
onedrive-provisioner = "onedrive_provisioner.cli:main"
onedrive-provisioner-mcp = "onedrive_provisioner.mcp.server:run"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
